tests/baselines/reference/moduleRedifinitionErrors.errors.txt
moduleRedifinitionErrors.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleRedifinitionErrors.ts (1 errors) ====
    class A {
    }
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }
    